--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,6 @@ flutter:
         pluginClass: FlutterStatusbarcolorPlugin
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.10.0"
+  sdk: '^3.0.0' #Eirik 22.09.24: Changed from '>=2.12.0 <3.0.0'
+  flutter: ">=3.24.0" #Eirik 22.09.24: Changed from ">=1.10.0"
 
